gateway/1.4/modules/ROOT/pages/_partials/task-config-logs-third-party.adoc
//tag::intro1[]
Anypoint Flex Gateway enables you to deliver runtime and access logs to any supported Fluent Bit {fluentbit-ver-var} output type. You configure log output via a custom YAML file. Additionally, to view access logs, you must also apply a Message Logging policy.

The following configuration file examples demonstrate how to direct Flex Gateway logs to output types: `File`, `HTTP`, and `Splunk`. However, you can use any Fluent Bit {fluentbit-ver-var} output type, such as `Azure Log Analytics`, `Amazon S3`, `Kafka`, and more. For a complete list of Fluent Bit output types, see https://docs.fluentbit.io/manual/v/{fluentbit-url-ver-var}/pipeline/outputs[Fluent Bit Output documentation^]. 

//end::intro1[]

//tag::intro2-conn[]
As well as being able to configure additional Fluent Bit log output types, Flex Gateway sends runtime logs to runtime manager and access logs to API Manager. Use the logs for quick log checks when an additional log output is not needed. To view runtime logs, see xref:flex-view-logs-in-monitoring.adoc[], and to configure and view access logs, see xref:flex-conn-message-log.adoc[]. For access logs to be visible in *Logs*, you must additionally apply a Message Logging policy.

//end::intro2-conn[]


//tag::intro2-local[]
As well as being able to configure additional Fluent Bit log output types, Flex Gateway maintains standard output logs. Use the standard output logs for quick checks when additional log output is not needed. To view the standard output logs, see xref:gateway::flex-local-view-logs.adoc[View Logs]. Both runtime and access logs appear in standard output logs. However, access logs are only present if you apply a Message Logging polivy.

//end::intro2-local[]

//tag::icon-table[]

[cols="1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="#linux-service"]
|image:install-docker-logo.png[25%,25%,xref="#docker-container"]
|image:install-kubernetes-logo.png[20%,20%,xref="#kubernetes-ingress-controller"]

|<<linux-service,Configure Log Output for Flex Gateway as a Linux Service>>
|<<docker-container,Configure Log Output for Flex Gateway in a Docker Container>>
|<<kubernetes-ingress-controller,Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller>>
|===

//end::icon-table[]
//tag::byb[]

== Before You Begin

Before configuring Flex Gateway log output for Splunk, complete the following tasks:

* xref:flex-install.adoc[Install Flex Gateway]
* xref:flex-{page-mode}-reg-run.adoc[Register and Run Flex Gateway]

Additionally, depending on your output, ensure that the service where you are directing logs to is operational. For Splunk, you must configure:

* A running https://www.splunk.com/[Splunk^] service. You can test Splunk by setting up a free Splunk Cloud trial.
* Added an HTTP Event Collector (HEC) data input to the Cloud or Enterprise Splunk service. See the https://docs.splunk.com/Documentation/Splunk/7.0.3/Data/UsetheHTTPEventCollector[Splunk documentation^] about how to add a data input, and how to create an HEC token.

//end::byb[]

//tag::runtime-access-logs[]

== Runtime Logs and Access Logs
Runtime and access logs both appear in the same log output. However, you can choose whether or not to include both logs in your log output. To use access logs, you must also apply a Message Logging policy.

=== Runtime Logs
Runtime logs include the following information:

* The startup and shutdown of Flex Gateway, Fluent Bit, and Envoy
* Deployed APIs and policies
* Possible misconfigurations of Flex Gateway or other errors

=== Access Logs
Access logs describe incoming interaction with Envoy over a period of time and incoming requests and responses for specific APIs. 

To enable access logs, you must apply a Message Logging policy to the API instances you want to monitor. To apply a Message Logging policy, see <<configure-access-logs, Configuring Access Logs>>.

//end::runtime-access-logs[]

//tag::file-example[]

== Logging Configuration File

include::partial$logging-config-file.adoc[]

To view configuration files with applied values, see the following configuration file examples:

* <<file-configuration-example, File Configuration Example>>
* <<http-configuration-example, HTTP Configuration Example>>
* <<splunk-configuration-example, Splunk Configuration Example>>


//end::file-example[]
//tag::linux[]

[[linux-service]]
== Configure Log Output for Flex Gateway as a Linux Service

. Create a YAML configuration file in the Flex Gateway configuration directory:
+
[source,ssh]
----
sudo touch /usr/local/share/mulesoft/flex-gateway/conf.d/logs-config.yaml
----

. Update the file with your desired output configuration details as shown in the following examples:
+
* <<file-configuration-example, File Configuration Example>>
* <<http-configuration-example, HTTP Configuration Example>>
* <<splunk-configuration-example, Splunk Configuration Example>>
+
//end::linux[]
//tag::docker[]

[[docker-container]]
== Configure Log Output for Flex Gateway in a Docker Container

NOTE: If you have already added a volume for a folder with your
Flex Gateway configuration files, go to the create and save a YAML file step.

. Press Ctrl+C to stop your Flex Gateway and any replicas.
. Create a folder in the directory with your Flex Gateway configuration files and name it `app`.
. Restart your Flex Gateway with an additional volume for the new `app` directory:
//end::docker[]

//tag::docker2[]
. Create and save a YAML file with your desired output configuration details as shown in the following examples:
+
* <<file-configuration-example, File Configuration Example>>
* <<http-configuration-example, HTTP Configuration Example>>
* <<splunk-configuration-example, Splunk Configuration Example>>
+
//end::docker2[]
//tag::k8s[]

[[kubernetes-ingress-controller]]
== Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller

To configure logging for Flex Gateway:

. Create a new resource using a YAML configuration file with your desired output configuration details as shown in the following examples:
+
* <<file-configuration-example, File Configuration Example>>
* <<http-configuration-example, HTTP Configuration Example>>
* <<splunk-configuration-example, Splunk Configuration Example>>
+
//end::k8s[]

//tag::view-logs-conn[]
If no events appear in the logging output, check the Flex Gateway runtime logs for any configuration errors.
+
To view runtime logs, see xref:flex-view-logs-in-monitoring.adoc[],
//end::view-logs-conn[]

//tag::view-logs-local[]
If no events appear in the logging output, check the Flex Gateway standard output logs for any configuration errors.
+
To view standard output logs, see xref:gateway::flex-local-view-logs.adoc[View Logs].
//end::view-logs-local[]

//tag::configure-message-logging-step[]
. If you are configuring access logs, see <<access-logs, Configure Access Logs>> to apply a Message Logging policy.

//end::configure-message-logging-step[]

//tag::file-configuration-example[]

[[file-configuration-example]]
== File Configuration Example

Configure Flex Gateway to send formatted runtime and access logs to a file called `log.txt` (Fluent Bit `File` output), in the `/var/log` directory. As an example, the following definition specifies a `spec.logging.outputs.type` value of `file`:


[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: logging-config
spec:
  logging:
    outputs:
    - name: default
      type: file
      parameters:
        file: /var/log/log.txt # Docker: replace `/var/log` with the absolute path to the mounted configuration directory
        format: template
        template: |
          [{date}][{logger}][{level}][{kind}] {message}
    runtimeLogs:
      logLevel: info
      outputs:
      - default
    accessLogs:
      outputs:
      - default
----

NOTE: For Docker, in `spec.logging.output.parameters.file`, replace `/var/log` with the absolute path to the mounted configuration directory.

//end::file-configuration-example[]

//tag::http-configuration-example[]

[[http-configuration-example]]
== HTTP Configuration Example

You can configure Flex Gateway to send formatted runtime and access logs to a `HTTP` output. As an example, the following definition specifies a `spec.logging.outputs.type` value of `HTTP`:

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: logging-config
spec:
  logging:
    outputs:
    - name: default
      type: HTTP
      parameters:
        host: collectors.au.sumologic.com
        port: "443"
        URI: /receiver/v1/http/[PrivateKey]
        format: json_lines
        json_date_key: timestamp
        json_date_format: iso8601
    runtimeLogs:
      logLevel: info
      outputs:
      - default
    accessLogs:
      outputs:
      - default
----

//end::http-configuration-example[]

//tag::splunk-configuration-example[]

[[splunk-configuration-example]]
== Splunk Configuration Example

Splunk begins ingesting logs soon after you apply this resource. 

[source,yaml]
----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: splunk-config
spec:
  logging:
    outputs:
    - name: splunk
      type: splunk
      parameters:
        host: <instance-name>.splunkcloud.com
        port: "8088"
        splunk_token: <Splunk's HEC token>
        tls: "on"
        tls.verify: "off"
    runtimeLogs:
      logLevel: info
      outputs: [splunk]
    accessLogs:
      outputs: [splunk]
----

//end::splunk-configuration-example[]

//tag::log-output-examples[]

== Logging Event Examples
The following log output examples demonstrate possible outputs that may occur for the following events:

* <<graceful-shutdowns, Graceful shutdowns>>
* <<service-disconnections, Service disconnections>>
* <<envoy-crash, Envoy crash>>

[[graceful-shutdowns]]
=== Graceful Shutdowns

----
[flex-gateway-agent][info] SignalHandler: Signal terminated received
[flex-gateway-agent][info] FilesystemWatcher(/usr/local/share/mulesoft/flex-gateway/conf.d): Stopping with context done
[flex-gateway-agent][info] XdsService: Stopping with context done
[flex-gateway-agent][error] flex-gateway-envoy: Stopped with error context canceled
[flex-gateway-agent][info] FilesystemWatcher(/etc/mulesoft/flex-gateway/conf.d): Stopping with context done
[flex-gateway-agent][error] flex-gateway-fluent: Stopped with error context canceled
[flex-gateway-agent][error] flex-gateway-fluent: Stopped with error context canceled
[flex-gateway-agent][info] Server dropped connection
[flex-gateway-agent][info] Agent communication closed
----


[[service-disconnections]]
=== Service Disconnections

----
[flex-gateway-agent][error] WebSocket receiver got error: read tcp 172.17.0.2:60780->100.64.1.37:443: i/o timeout
[flex-gateway-agent][info] Server dropped connection
[flex-gateway-agent][warn] Dropped connection due to error read tcp 172.17.0.2:60780->100.64.1.37:443: i/o timeout
[flex-gateway-agent][info] Reconnecting after connection was dropped
[flex-gateway-agent][error] Error connecting to Websocket Server: dial tcp: lookup arm-mcm2-service.kstg.msap.io on 192.168.65.7:53: dial udp 192.168.65.7:53: connect: network is unreachable
----

[[envoy-crash]]
=== Envoy Crash

----
[flex-gateway-envoy][critical] Caught Segmentation fault, suspect faulting address 0xffff87e8fb89485b
[flex-gateway-envoy][critical] Backtrace (use tools/stack_decode.py to get line numbers):
[flex-gateway-envoy][critical] Envoy version: 36cbae1aeedd8c3b4eb88cd28268d21fe0905ce5/1.23.0/Clean/RELEASE/BoringSSL
[flex-gateway-envoy][critical] #0: __restore_rt [0x7ff79db2f140]
[flex-gateway-envoy][critical] #1: [0x557dcfad249b]
[flex-gateway-envoy][critical] #2: [0x557dcdf35237]
[flex-gateway-envoy][critical] #3: [0x557dce16d49f]
[flex-gateway-envoy][critical] #4: [0x557dce1a8ff5]
[flex-gateway-envoy][critical] #5: [0x557dce1a8e47]
[flex-gateway-envoy][critical] #6: ...
[flex-gateway-agent][error] flex-gateway-envoy: Stopped with error flex-gateway-envoy: command error: signal: segmentation fault
[flex-gateway-agent][error] flex-gateway-fluent: Stopped with error context canceled
[flex-gateway-agent][error] flex-gateway-fluent: Stopped with error context canceled
[flex-gateway-agent][info] FilesystemWatcher(/etc/mulesoft/flex-gateway/conf.d): Stopping with context done
[flex-gateway-agent][info] FilesystemWatcher(/usr/local/share/mulesoft/flex-gateway/conf.d): Stopping with context done
[flex-gateway-agent][info] XdsService: Stopping with context done
[flex-gateway-agent][info] Server dropped connection
[flex-gateway-agent][info] Agent communication closed
----
//end::log-output-examples[]